// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordStrengthMeter should render danger color correctly 1`] = `
<div
  className="d-flex mt-2 w-100 align-items-center"
>
  <small>
    <em>
      Strength 
    </em>
  </small>
  <Progress
    barStyle={Object {}}
    className="w-100"
    color="danger"
    max={20}
    min={0}
    style={
      Object {
        "height": 10,
      }
    }
    tag="div"
    value={5}
  />
</div>
`;

exports[`PasswordStrengthMeter should render success color correctly 1`] = `
<div
  className="d-flex mt-2 w-100 align-items-center"
>
  <small>
    <em>
      Strength 
    </em>
  </small>
  <Progress
    barStyle={Object {}}
    className="w-100"
    color="success"
    max={20}
    min={0}
    style={
      Object {
        "height": 10,
      }
    }
    tag="div"
    value={20}
  />
</div>
`;

exports[`PasswordStrengthMeter should render warning color correctly 1`] = `
<div
  className="d-flex mt-2 w-100 align-items-center"
>
  <small>
    <em>
      Strength 
    </em>
  </small>
  <Progress
    barStyle={Object {}}
    className="w-100"
    color="warning"
    max={20}
    min={0}
    style={
      Object {
        "height": 10,
      }
    }
    tag="div"
    value={11}
  />
</div>
`;
